@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.34 2008-06-25 20:33:20 nicm Exp $
+# $Id: GNUmakefile,v 1.35 2008-06-25 20:43:13 nicm Exp $
 
 .PHONY: clean
 
@@ -28,7 +28,7 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-kill-server.c cmd-set-window-option.c cmd-show-options.c \
       cmd-show-window-options.c cmd-command-prompt.c cmd-set-buffer.c \
       cmd-show-buffer.c cmd-list-buffers.c cmd-delete-buffer.c \
-      cmd-list-commands.c cmd-move-window.c \
+      cmd-list-commands.c cmd-move-window.c cmd-select-prompt.c \
       window-scroll.c window-more.c window-copy.c options.c paste.c \
       tty.c tty-keys.c tty-write.c screen-write.c screen-redraw.c
 
